--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "jsx-loader": "^0.13.2",
+    "koa-webpack-middleware": "^1.0.5",
     "less": "^2.7.1",
     "less-loader": "^4.0.3",
     "node-sass": "^4.1.1",
@@ -52,6 +53,8 @@
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.0-rc.3",
+    "webpack-dev-server": "^2.5.1",
+    "webpack-hot-middleware": "^2.18.2",
     "webpack-merge": "^2.0.0"
   },
   "engines": {
